--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+
         android:theme="@style/Theme.RUTINAP">
         <activity
             android:name=".login"
@@ -15,10 +17,7 @@
         <activity
             android:name=".Inicio"
             android:exported="false" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
+
         <activity
             android:name=".SplashScreen.SplashScreen"
             android:exported="true">
@@ -30,6 +29,7 @@
         </activity>
         <activity
             android:name=".Registro"
+
             android:exported="true" />
     </application>
 
