--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,16 +8,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-
-        android:theme="@style/Theme.RUTINAP">
+        android:theme="@style/Theme.RUTINAP"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".App"
+            android:exported="false" />
         <activity
             android:name=".login"
             android:exported="false" />
         <activity
             android:name=".Inicio"
             android:exported="false" />
-
         <activity
             android:name=".SplashScreen.SplashScreen"
             android:exported="true">
@@ -29,7 +30,6 @@
         </activity>
         <activity
             android:name=".Registro"
-
             android:exported="true" />
     </application>
 
