-Fusion login y CRUD rutinas
-Se agregaron las dependencias para (cardview) y (recyclerview) que habian sido eliminadas por conflicto durante el pull request
-Se enlazo correctamente el login con la parte de CRUD rutinas
-Aun falta las bases de datos para CRUD rutinas
-La (activity_app) es la Vista de inicio despues de login ahi se colocan los botones para ir a CRUD rutinas y CRUD dietas (Asi evitamos conflictos :D)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         android:theme="@style/Theme.RUTINAP"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".CrudRutinas"
+            android:exported="false" />
+        <activity
+            android:name=".VistaInicio"
+            android:exported="false" />
+        <activity
             android:name=".App"
             android:exported="false" />
         <activity
